<resources>
    <string name="app_name">Student Attendance Management</string>
    <string name="copy"><![CDATA[Developed By Parth Shah & Kirankumar Vaghela]]></string>
    <string name="copyRights">Developed By Parth Shah &amp; Kirankumar Vaghela</string>
    <string name="logo">Logo</string>
    <string name="login_to_select_user">Login to Select User</string>
    <string name="admin">Admin</string>
    <string name="staff">Professor/Principal</string>
    <string name="student">Student</string>
    <string name="enter_user_id">Enter User ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="admin_login">Admin Login</string>
    <string name="staff_login">Professor/Principal Login</string>
    <string name="student_login">Student Login</string>
    <string name="change_password">Change Password</string>
    <string name="manage_batch">Batch</string>
    <string name="manage_branch">Branch</string>
    <string name="manage_subject">Subject</string>
    <string name="admin_panel">Admin Dashboard</string>
    <string name="manage_student">Student</string>
    <string name="manage_professor">Professor</string>
    <string name="logout">Logout</string>
    <string name="manage_attendance">Attendance</string>
    <string name="enter_your_old_password">Enter Your Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="re_enter_new_password">Re-Enter New Password</string>
    <string name="add_batch">Add Batch</string>
    <string name="add_subject">Add Subject</string>
    <string name="add_branch">Add Branch</string>
    <string name="add_professor">Add Professor</string>
    <string name="enter_batch_name">Enter Batch Name</string>
    <string name="enter_branch_name">Enter Branch Name</string>
    <string name="batch_name">Batch Name</string>
    <string name="branch_name">Branch Name</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="delete_branch">Delete Branch</string>
    <string name="cancle">Cancle</string>
    <string name="yes">Yes</string>
    <string name="delete_batch">Delete Batch</string>
    <string name="enter_subject_name">Enter Subject Name</string>
    <string name="select_branch">Select Branch</string>
    <string name="subject_name">Subject Name</string>
    <string name="subject_sem">Subject Sem.</string>
    <string name="manage_lecture">Lecture Type</string>
    <string name="add_lecture_type">Add Lecture Type</string>
    <string name="enter_lecture_type">Enter Lecture Type</string>
    <string name="lecture_type">Lecture Type</string>
    <string name="delete_subject">Delete Subject</string>
    <string name="branch_id">Branch ID</string>
    <string name="enter_professor_name">Enter Professor Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="professor_name">Professor Name</string>
    <string name="staff_dashboard">Staff Dashboard</string>
    <string name="professor_dashboard">Professor Dashboard</string>
    <string name="tack_subject">Tack Subject</string>
    <string name="student_name">Student Name</string>
    <string name="select_student_list">Select Student List</string>
    <string name="add_student">Add Student</string>
    <string name="enter_student_name">Enter Student Name</string>
    <string name="enter_parent_email">Enter Parent Email</string>
    <string name="select_batch">Select Batch</string>
    <string name="select_semester">Select Semester</string>
    <string name="take_subject">Take Subject</string>
    <string name="select_subject">Select Subject</string>
    <string name="select_lecture_type">Select Lecture Type</string>
    <string name="forgot_your_password"><u>Forgot your password ?</u></string>
    <string name="batch_id">Batch ID</string>
    <string name="delete_take_subject">Delete Take Subject</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="select_slot">Select Slot</string>
    <string name="enter_description">Enter Description</string>
    <string name="select_date">Select Date</string>
    <string name="edit_attendance">View/Edit Attendance</string>
    <string name="genrate_report">Genrate Report</string>
    <string name="dateFormate">dd/MM/yyyy</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="select_all">Select All</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="present">Present</string>
    <string name="attendance_status">Attendance Status</string>
    <string name="absent">Absent</string>
    <string name="total">Total</string>
    <string name="student_dashboard">Student Dashboard</string>
</resources>