<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Login"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:drawableTop="@drawable/ic_staff"
        android:fontFamily="@font/eagle_lake"
        android:gravity="center"
        android:text="@string/student_login"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp"
        android:theme="@style/Theme.Style">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/enter_user_id"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="5dp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"

            app:startIconDrawable="@drawable/ic_user_id"

            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"

            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="2dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_id"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:fontFamily="@font/doppio_one"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/enter_password"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="5dp"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"

            app:startIconDrawable="@drawable/ic_password_24"

            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:passwordToggleEnabled="true"

            app:boxStrokeColor="@color/blue"
            app:boxStrokeWidth="2dp"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:fontFamily="@font/doppio_one"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="5dp"
            android:background="@color/purple_500"
            android:fontFamily="@font/doppio_one"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/eagle_lake"
            android:gravity="center"
            android:text="@string/forgot_your_password"
            android:onClick="forgotPassword"
            android:textSize="13sp"
            android:textColor="#000"
            android:textStyle="bold|italic" />

    </LinearLayout>

</LinearLayout>
