<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:fontFamily="@font/eagle_lake"
        android:gravity="center"
        android:paddingTop="100dp"
        android:text="@string/login_to_select_user"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:fadeScrollbars="true"
        android:gravity="center"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:overScrollMode="ifContentScrolls"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:scrollbars="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_admin"
                android:drawableLeft="@drawable/ic_admin"
                android:fontFamily="@font/eagle_lake"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/admin"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/staff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_staff"
                android:drawableLeft="@drawable/ic_staff"
                android:fontFamily="@font/eagle_lake"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/staff"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_student"
                android:drawableLeft="@drawable/ic_student"
                android:fontFamily="@font/eagle_lake"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/student"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>