<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/eagle_lake"
            android:text="@string/attendance_status"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/eagle_lake"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/present"
                android:textColor="#00AA00"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tvPresent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/amarante"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/present"
                android:textColor="#00AA00"
                android:textSize="22sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/eagle_lake"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/absent"
                android:textColor="#EE0000"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tvAbsent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/amarante"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/absent"
                android:textColor="#EE0000"
                android:textSize="22sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/eagle_lake"
                android:gravity="center"
                android:padding="5dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/eagle_lake"
                android:gravity="center"
                android:padding="5dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnCancle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#EE0000"
                android:drawablePadding="3dp"
                android:elevation="10dp"
                android:fontFamily="@font/eagle_lake"
                android:text="@string/cancle"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/btnYes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#00AA00"
                android:drawablePadding="3dp"
                android:elevation="10dp"
                android:fontFamily="@font/eagle_lake"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold|italic" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>