<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageAttendance">

    <TextView
        android:id="@+id/take_attendance_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/purple_700"
        android:clickable="false"
        android:fontFamily="@font/eagle_lake"
        android:gravity="center"
        android:isScrollContainer="false"
        android:padding="30dp"
        android:text="@string/edit_attendance"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="italic|bold" />

    <ScrollView
        android:id="@+id/fetch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/take_attendance_title"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:theme="@style/Theme.Style">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilBatch"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/select_batch"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"

                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidth="2dp"
                app:hintAnimationEnabled="true"

                app:hintEnabled="true">

                <AutoCompleteTextView
                    android:id="@+id/actvSelectBatch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:fontFamily="@font/doppio_one"
                    android:padding="15dp"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSemester"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:hint="@string/select_semester"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"

                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidth="2dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <AutoCompleteTextView
                    android:id="@+id/actvSelectSemester"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:fontFamily="@font/doppio_one"
                    android:padding="15dp"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSelectLecture"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:hint="@string/select_lecture_type"
                app:boxCornerRadiusBottomEnd="10dp"

                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidth="2dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <AutoCompleteTextView
                    android:id="@+id/actvSelectLecture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:fontFamily="@font/doppio_one"
                    android:padding="15dp"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSelectSubject"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:hint="@string/select_subject"
                app:boxCornerRadiusBottomEnd="10dp"

                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidth="2dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <AutoCompleteTextView
                    android:id="@+id/actvSelectSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:fontFamily="@font/doppio_one"
                    android:padding="15dp"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSelectSlot"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:hint="@string/select_slot"
                app:boxCornerRadiusBottomEnd="10dp"

                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeWidth="2dp"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <AutoCompleteTextView
                    android:id="@+id/actvSelectSlot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:fontFamily="@font/doppio_one"
                    android:padding="15dp"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSelectDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:enabled="false"
                android:hint="@string/select_date"
                app:boxBackgroundColor="@color/white"

                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"

                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/blue"
                app:boxStrokeWidth="2dp"
                app:endIconCheckable="true"
                app:endIconDrawable="@drawable/ic_date"

                app:endIconMode="custom"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/blue">

                <AutoCompleteTextView
                    android:id="@+id/actvSelectDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:fontFamily="@font/doppio_one"
                    android:padding="15dp"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/teal_700"
                android:onClick="TakeAttendance"
                android:text="@string/take_attendance"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/attendanceData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:liftOnScroll="true"
                app:menu="@menu/top_bar"
                app:navigationContentDescription="@string/back"
                app:navigationIcon="@drawable/ic_arrow_back" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/student_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>